# sr_t

./: .gitignore  README.md  pyproject.toml  sr_t.py  transcriber.py  translator.py
